<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
>
    <TextView
            android:id="@+id/base"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Base URL"
    />
    <EditText
            android:id="@+id/et1"
            android:text = "@string/base_url"
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount_prompt"
    />
    <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate_prompt"
    />
    <EditText
            android:id="@+id/et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/loan_period_prompt"
    />
    <EditText
            android:id="@+id/et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <Button android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="calculate repayments"
            android:onClick="showLoanPayments"

    />
    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment_prompt"
    />
    <TextView
            android:id="@+id/txt1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/total_payments_prompt"
    />
    <TextView
            android:id="@+id/txt2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
    />









</LinearLayout>

